# rust-synth

./: .gitignore  Cargo.toml
src/: lib.rs  plugin.rs
src/synth/: mod.rs  mono.rs  osc.rs  params.rs
